# RINA-AI

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
assets/logo/: README.md
demo/: README.md  api_client.py  chat_example.py  inference_example.py
evaluation/: README.md  compare.py
evaluation/_utils/: __init__.py  backend.py  sandbox.py
evaluation/bigcodebench/: run_eval.py
evaluation/humaneval/: README.md  run_eval.py
evaluation/livecodebench/: run_eval.py
evaluation/mbpp/: README.md  run_eval.py
finetune/: README.md  TRAINING_GUIDE.md  train.py
lsp-server/: CONFIGS.md  README.md  package-lock.json  package.json
notebooks/: train_and_upload.ipynb
rina-agent/: README.md  package-lock.json  package.json
rina-bot/: README.md  package-lock.json  package.json
rina-cli/: README.md  package-lock.json  package.json  tsconfig.json
rina-orchestrator/: .gitignore  README.md  WORKER_RUNBOOK.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: generate_training_data.py  upload_to_huggingface.py
tests/: conftest.py  test_backend.py  test_compare.py  test_finetune_config.py  test_repo_structure.py  test_sandbox.py  test_swebench.py
vscode-extension/: .gitignore  PUBLISHING.md  README.md  package-lock.json  package.json  tsconfig.json
(+69 files in other folders)
